--- a/iTunesSearch/TableViewCell.xib
+++ b/iTunesSearch/TableViewCell.xib
@@ -14,55 +14,121 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" alpha="0.14999999999999969" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ebook" translatesAutoresizingMaskIntoConstraints="NO" id="X4n-dy-ERk">
+                        <rect key="frame" x="252" y="21.5" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="FZG-c4-xhk"/>
+                            <constraint firstAttribute="width" constant="40" id="b7d-Hn-JrR"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome da Mídia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIA-JU-luV">
-                        <rect key="frame" x="8" y="8" width="284" height="20.5"/>
+                        <rect key="frame" x="68" y="8" width="224" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo da Mídia" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z5-yj-wnl">
-                        <rect key="frame" x="8" y="33" width="100" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="U$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Z5-yj-wnl">
+                        <rect key="frame" x="232" y="44" width="22.5" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="EVc-3Z-Lrg"/>
+                            <constraint firstAttribute="width" constant="50" id="NLw-eM-WYr"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" red="0.04647100477645915" green="0.29539171471357822" blue="0.86274516582489014" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="NLw-eM-WYr"/>
+                            </mask>
+                        </variation>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gênero" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYE-eo-l9A">
+                        <rect key="frame" x="69" y="44" width="38" height="13.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <color key="textColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="País" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYE-eo-l9A">
-                        <rect key="frame" x="100" y="32" width="100" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artista" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w4-BY-dca">
+                        <rect key="frame" x="69" y="29" width="223" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="0.0" green="0.74725773358585856" blue="0.00022875337211625862" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Gênero" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w4-BY-dca">
-                        <rect key="frame" x="192" y="34" width="100" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wkK-G2-L9H">
+                        <rect key="frame" x="8" y="7" width="55" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="55" id="I0l-2f-bFe"/>
+                            <constraint firstAttribute="height" constant="55" id="Rbz-fh-DJc"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FXI-W5-xl3">
+                        <rect key="frame" x="265" y="45" width="27" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="Zij-wu-xhB"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.25098040699958801" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Zij-wu-xhB"/>
+                            </mask>
+                        </variation>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="6Z5-yj-wnl" secondAttribute="trailing" id="20H-3b-RZ8"/>
-                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="96O-aR-ps1"/>
-                    <constraint firstItem="UIA-JU-luV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Q1V-YW-Wh5"/>
-                    <constraint firstItem="UIA-JU-luV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="YdC-rX-aV6"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="UIA-JU-luV" secondAttribute="trailing" id="cTH-Nq-14q"/>
-                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="top" secondItem="UIA-JU-luV" secondAttribute="bottom" constant="5" id="tJH-0d-wda"/>
+                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="top" secondItem="7w4-BY-dca" secondAttribute="bottom" constant="2" id="03O-SH-7zs"/>
+                    <constraint firstItem="7w4-BY-dca" firstAttribute="leading" secondItem="wkK-G2-L9H" secondAttribute="trailing" constant="6" id="35b-Zg-CSZ"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="top" secondItem="7w4-BY-dca" secondAttribute="bottom" constant="2" id="3wN-c7-izN"/>
+                    <constraint firstItem="7w4-BY-dca" firstAttribute="top" secondItem="UIA-JU-luV" secondAttribute="bottom" constant="1" id="4HJ-Yk-dj7"/>
+                    <constraint firstAttribute="centerY" secondItem="wkK-G2-L9H" secondAttribute="centerY" id="664-dD-Blw"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="leading" secondItem="wkK-G2-L9H" secondAttribute="trailing" constant="6" id="7Pt-sD-r1C"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="7w4-BY-dca" secondAttribute="trailing" id="8Cc-Gp-004"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="top" secondItem="7w4-BY-dca" secondAttribute="bottom" constant="2" id="BpM-sa-pzo"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="leading" secondItem="7w4-BY-dca" secondAttribute="trailing" id="KT9-QX-AbZ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="UIA-JU-luV" secondAttribute="trailing" id="L2g-ff-aPO"/>
+                    <constraint firstItem="UIA-JU-luV" firstAttribute="leading" secondItem="wkK-G2-L9H" secondAttribute="trailing" constant="5" id="LoV-o9-WIf"/>
+                    <constraint firstItem="FXI-W5-xl3" firstAttribute="leading" secondItem="6Z5-yj-wnl" secondAttribute="trailing" constant="10" id="M8h-Vs-wL0"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="FXI-W5-xl3" secondAttribute="trailing" id="MGf-uG-iBb"/>
+                    <constraint firstItem="FXI-W5-xl3" firstAttribute="top" secondItem="7w4-BY-dca" secondAttribute="bottom" constant="2" id="Og8-U3-lNL"/>
+                    <constraint firstItem="7w4-BY-dca" firstAttribute="leading" secondItem="wkK-G2-L9H" secondAttribute="trailing" constant="6" id="P6i-9W-AD9"/>
+                    <constraint firstItem="wkK-G2-L9H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="SmS-Eq-B8F"/>
+                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="centerX" secondItem="7w4-BY-dca" secondAttribute="centerX" constant="-22" id="fKJ-i3-gQ1"/>
+                    <constraint firstItem="UIA-JU-luV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="h1M-Me-1RG"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="leading" secondItem="wkK-G2-L9H" secondAttribute="trailing" constant="6" id="m1q-t0-J5a"/>
+                    <constraint firstItem="gYE-eo-l9A" firstAttribute="top" secondItem="UIA-JU-luV" secondAttribute="bottom" constant="2" id="mVm-xH-Il1"/>
+                    <constraint firstItem="6Z5-yj-wnl" firstAttribute="top" secondItem="7w4-BY-dca" secondAttribute="bottom" constant="2" id="nUp-cV-T4a"/>
+                    <constraint firstAttribute="centerY" secondItem="X4n-dy-ERk" secondAttribute="centerY" id="oj6-nv-VAk"/>
+                    <constraint firstItem="7w4-BY-dca" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="qWy-fb-Qus"/>
+                    <constraint firstItem="X4n-dy-ERk" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="r6E-NI-keI"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="X4n-dy-ERk" secondAttribute="bottom" id="yry-MX-BCs"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
-                        <exclude reference="20H-3b-RZ8"/>
+                        <exclude reference="P6i-9W-AD9"/>
+                        <exclude reference="qWy-fb-Qus"/>
+                        <exclude reference="3wN-c7-izN"/>
+                        <exclude reference="KT9-QX-AbZ"/>
+                        <exclude reference="m1q-t0-J5a"/>
+                        <exclude reference="mVm-xH-Il1"/>
+                        <exclude reference="fKJ-i3-gQ1"/>
+                        <exclude reference="nUp-cV-T4a"/>
+                        <exclude reference="oj6-nv-VAk"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="genero" destination="7w4-BY-dca" id="K1Q-y7-ucm"/>
-                <outlet property="nome" destination="UIA-JU-luV" id="ubX-WX-gam"/>
-                <outlet property="pais" destination="gYE-eo-l9A" id="ji3-9z-5pv"/>
-                <outlet property="tipo" destination="6Z5-yj-wnl" id="vYj-HE-tLd"/>
+                <outlet property="artist" destination="7w4-BY-dca" id="aGL-cJ-1sl"/>
+                <outlet property="genre" destination="gYE-eo-l9A" id="5BT-yG-XVR"/>
+                <outlet property="image" destination="wkK-G2-L9H" id="HBI-f0-jn5"/>
+                <outlet property="kindImage" destination="X4n-dy-ERk" id="knD-B9-8OA"/>
+                <outlet property="name" destination="UIA-JU-luV" id="fmk-wZ-b5E"/>
+                <outlet property="price" destination="6Z5-yj-wnl" id="WwN-PV-Lcq"/>
+                <outlet property="trackYear" destination="FXI-W5-xl3" id="2Ks-vC-Scf"/>
             </connections>
             <point key="canvasLocation" x="577" y="83"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ebook" width="32" height="32"/>
+    </resources>
 </document>
